[package]
name = "luxide"
version = "0.1.0"
authors = ["Mike Yount <michael@yount.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
"luxafor-usb" = { path = "luxafor-usb" }
log = "^0.4"
simplelog = "^0.7"
clap = "^2.33"
