[package]
name = "luxide"
version = "1.0.0"
authors = ["Mike Yount <michael@yount.me>"]
edition = "2018"
license = "GPL-3.0-only"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
"luxafor-usb" = { path = "luxafor-usb" }
log = "^0.4"
simplelog = "^0.7"
clap = "^2.33"
either = "^1.6"
itertools = "^0.9"
isatty = "^0.1"
