[package]
name = "luxafor-usb"
version = "0.9.0"
authors = ["Mike Yount <michael@yount.me>"]
edition = "2018"
license = "GPL-3.0-only"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hidapi = "1.2.5"
enumflags2 = "^0.6"
log = "^0.4"
thiserror = "^1.0"
